# r2e-test-server

./: README.md  pyproject.toml
.github/: pyright.yml
.github/workflows/: run_tests.yml
r2e_test_server/: cli.py  server.py
r2e_test_server/ast/: transformer.py
r2e_test_server/instrument/: __init__.py  arguments.py  base.py  perf.py
r2e_test_server/modules/: explorer.py
r2e_test_server/testing/: cleaner.py  codecov.py  loader.py  r2e_testprogram.py  result.py  runner.py  test_engines.py  util.py
tests/: test_server.py  test_server_general.py
tests/testing/: test_cleaners.py
