[tool.poetry]
name = "r2e_test_server"
version = "0.1.0"
description = "Test Server For R2E"
authors = ["Naman Jain <naman1205jain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rpyc = "^6.0.0"
coverage = "^7.5.0"
pyright = "^1.1.360"

[tool.pyright]
reportMissingTypeStubs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
